Recover STARHACK, avoid deprecation warnings